[package]
name = "tv_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = [] }
async-std = "1.12.0"
once_cell = "1.19.0"
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.20"


[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
